--- a/movie-search/package.json
+++ b/movie-search/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "test": "npx jest",
     "dev": "webpack --mode development",
     "start": "webpack-dev-server --mode development --open"
   },
@@ -10,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "babel-loader": "^8.1.0",
@@ -19,6 +21,7 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "html-webpack-plugin": "^4.2.0",
+    "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
