--- a/fancy-weather/package.json
+++ b/fancy-weather/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "swiper": "^5.3.8"
   }
 }
